gcc/testsuite/rust/rustc/ui/error-codes/E0585.rs
fn main() {
    /// Hello! I'm useless...
// { dg-error ".E0585." "" { target *-*-* } .-1 }
}

